--- a/pathway_analysis/Biopython.html
+++ b/pathway_analysis/Biopython.html
@@ -14300,6 +14300,7 @@ a.anchor-link {
 <h1 id="KEGG-pathways-from-EC-codes">KEGG pathways from EC codes<a class="anchor-link" href="#KEGG-pathways-from-EC-codes">&#182;</a></h1><p>Install Biopython package from pip:</p>
 <blockquote><p>python -m pip install Biopython</p>
 </blockquote>
+<h2 id="Downloading-the-dictionnary-of-pathways-(per-enzyme)">Downloading the dictionnary of pathways (per enzyme)<a class="anchor-link" href="#Downloading-the-dictionnary-of-pathways-(per-enzyme)">&#182;</a></h2><p>This step can be skipped as the dictionnary is stored in /data</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
@@ -14335,7 +14336,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Loading-the-dictionnary-of-pathways">Loading the dictionnary of pathways<a class="anchor-link" href="#Loading-the-dictionnary-of-pathways">&#182;</a></h2>
+<h2 id="Loading-the-dictionnary-of-pathways-(per-enzyme)">Loading the dictionnary of pathways (per enzyme)<a class="anchor-link" href="#Loading-the-dictionnary-of-pathways-(per-enzyme)">&#182;</a></h2>
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
@@ -14360,12 +14361,13 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Enrichment-preparation">Enrichment preparation<a class="anchor-link" href="#Enrichment-preparation">&#182;</a></h1><p>The remaining steps will be done in R (cf. enrichment_analysis.Rmd)</p>
+<h2 id="Downloading-the-dictionnary-of-enzymes-(per-pathway)">Downloading the dictionnary of enzymes (per pathway)<a class="anchor-link" href="#Downloading-the-dictionnary-of-enzymes-(per-pathway)">&#182;</a></h2><p>This step can also be skipped as the dictionnary is stored in /data</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Download all ec pathways from KEGG</p>
+<p>Download all ec pathways from KEGG.</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
@@ -14429,6 +14431,11 @@ a.anchor-link {
 </div>
 </div>
 
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Loading-the-dictionnary-of-enzymes-(per-pathway)">Loading the dictionnary of enzymes (per pathway)<a class="anchor-link" href="#Loading-the-dictionnary-of-enzymes-(per-pathway)">&#182;</a></h2>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
@@ -14441,6 +14448,50 @@ a.anchor-link {
 <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s2">&quot;data/all_pathways_enzymes_dict.json&quot;</span><span class="p">,</span> <span class="s2">&quot;r&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">file</span><span class="p">:</span>
     <span class="c1"># Load the dictionary from the file</span>
     <span class="n">all_pathways_enzymes_dict</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">file</span><span class="p">)</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Downloading-the-dictionnary-of-compounds-(per-pathway)">Downloading the dictionnary of compounds (per pathway)<a class="anchor-link" href="#Downloading-the-dictionnary-of-compounds-(per-pathway)">&#182;</a></h2><p>This step can also be skipped as the dictionnary is stored in /data</p>
+
+</div>
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>Attribute the related compounds (metabolites) for all the pathways</p>
+
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">re</span>
+<span class="kn">import</span> <span class="nn">json</span>
+
+<span class="n">mb_pathways</span> <span class="o">=</span> <span class="p">{}</span>
+
+<span class="k">for</span> <span class="n">pathway_id</span> <span class="ow">in</span> <span class="n">all_pathway_ids</span><span class="p">:</span>
+    <span class="n">pathway_url</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;http://rest.kegg.jp/get/</span><span class="si">{</span><span class="n">pathway_id</span><span class="si">}</span><span class="s1">&#39;</span>
+    <span class="n">pathway_response</span> <span class="o">=</span> <span class="n">requests</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">pathway_url</span><span class="p">)</span>
+    <span class="n">pathway_text</span> <span class="o">=</span> <span class="n">pathway_response</span><span class="o">.</span><span class="n">text</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span>
+    
+    <span class="c1"># find the lines containing enzyme information</span>
+    <span class="n">pattern</span> <span class="o">=</span> <span class="sa">r</span><span class="s2">&quot;COMPOUND\s+(.*?)\s+REFERENCE&quot;</span>
+    <span class="n">compound_lines</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">search</span><span class="p">(</span><span class="n">pattern</span><span class="p">,</span> <span class="n">pathway_text</span><span class="p">,</span> <span class="n">re</span><span class="o">.</span><span class="n">DOTALL</span><span class="p">)</span>
+    <span class="k">if</span> <span class="n">compound_lines</span><span class="p">:</span>
+        <span class="n">compound</span> <span class="o">=</span> <span class="p">[</span><span class="n">s</span><span class="o">.</span><span class="n">lstrip</span><span class="p">()</span> <span class="k">for</span> <span class="n">s</span> <span class="ow">in</span> <span class="n">compound_lines</span><span class="o">.</span><span class="n">group</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s1">&#39;</span><span class="se">\n</span><span class="s1">&#39;</span><span class="p">)]</span>
+        <span class="n">mb_pathways</span><span class="p">[</span><span class="n">pathway_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">compound</span>
+
+<span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s2">&quot;data/all_pathways_compounds_dict.json&quot;</span><span class="p">,</span> <span class="s2">&quot;w&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">file</span><span class="p">:</span>
+    <span class="n">json</span><span class="o">.</span><span class="n">dump</span><span class="p">(</span><span class="n">mb_pathways</span><span class="p">,</span> <span class="n">file</span><span class="p">)</span>  <span class="c1"># encode dict into JSON</span>
 </pre></div>
 
      </div>
@@ -14511,6 +14562,11 @@ a.anchor-link {
 
 </div>
 
+</div>
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Loading-the-dictionnary-of-compounds-(per-pathway)">Loading the dictionnary of compounds (per pathway)<a class="anchor-link" href="#Loading-the-dictionnary-of-compounds-(per-pathway)">&#182;</a></h2>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
@@ -14520,9 +14576,9 @@ a.anchor-link {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">json</span>
 
 <span class="c1"># Open the file for reading</span>
-<span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s2">&quot;data/ec_pathway_names_dict.json&quot;</span><span class="p">,</span> <span class="s2">&quot;r&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">file</span><span class="p">:</span>
+<span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s2">&quot;data/all_pathways_compounds_dict.json&quot;</span><span class="p">,</span> <span class="s2">&quot;r&quot;</span><span class="p">)</span> <span class="k">as</span> <span class="n">file</span><span class="p">:</span>
     <span class="c1"># Load the dictionary from the file</span>
-    <span class="n">pathway_names</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">file</span><span class="p">)</span>
+    <span class="n">mb_pathways</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">file</span><span class="p">)</span>
 </pre></div>
 
      </div>
